@@ -524,6 +524,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|schema
+operator|.
+name|CopyField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|search
 operator|.
 name|SolrIndexSearcher
@@ -4227,6 +4241,8 @@ name|add
 argument_list|(
 literal|"copyDests"
 argument_list|,
+name|toListOfStringDests
+argument_list|(
 name|schema
 operator|.
 name|getCopyFieldsList
@@ -4237,6 +4253,7 @@ name|getName
 argument_list|()
 argument_list|)
 argument_list|)
+argument_list|)
 expr_stmt|;
 name|field
 operator|.
@@ -4244,6 +4261,8 @@ name|add
 argument_list|(
 literal|"copySources"
 argument_list|,
+name|toListOfStrings
+argument_list|(
 name|schema
 operator|.
 name|getCopySources
@@ -4252,6 +4271,7 @@ name|f
 operator|.
 name|getName
 argument_list|()
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -4881,6 +4901,120 @@ name|toNamedList
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|toListOfStrings
+specifier|private
+specifier|static
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|toListOfStrings
+parameter_list|(
+name|SchemaField
+index|[]
+name|raw
+parameter_list|)
+block|{
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|result
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|(
+name|raw
+operator|.
+name|length
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|SchemaField
+name|f
+range|:
+name|raw
+control|)
+block|{
+name|result
+operator|.
+name|add
+argument_list|(
+name|f
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|result
+return|;
+block|}
+DECL|method|toListOfStringDests
+specifier|private
+specifier|static
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|toListOfStringDests
+parameter_list|(
+name|List
+argument_list|<
+name|CopyField
+argument_list|>
+name|raw
+parameter_list|)
+block|{
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|result
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|(
+name|raw
+operator|.
+name|size
+argument_list|()
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|CopyField
+name|f
+range|:
+name|raw
+control|)
+block|{
+name|result
+operator|.
+name|add
+argument_list|(
+name|f
+operator|.
+name|getDestination
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|result
+return|;
 block|}
 comment|//////////////////////// SolrInfoMBeans methods //////////////////////
 annotation|@
