@@ -686,6 +686,42 @@ operator|+
 literal|"']/str"
 return|;
 block|}
+DECL|method|field
+specifier|private
+specifier|static
+name|String
+name|field
+parameter_list|(
+name|String
+name|field
+parameter_list|)
+block|{
+return|return
+literal|"//lst[@name='fields']/lst[@name='"
+operator|+
+name|field
+operator|+
+literal|"']/"
+return|;
+block|}
+DECL|method|dynfield
+specifier|private
+specifier|static
+name|String
+name|dynfield
+parameter_list|(
+name|String
+name|field
+parameter_list|)
+block|{
+return|return
+literal|"//lst[@name='dynamicFields']/lst[@name='"
+operator|+
+name|field
+operator|+
+literal|"']/"
+return|;
+block|}
 annotation|@
 name|Test
 DECL|method|testFlParam
@@ -873,6 +909,95 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|testCopyFieldLists
+specifier|public
+name|void
+name|testCopyFieldLists
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/admin/luke"
+argument_list|,
+literal|"show"
+argument_list|,
+literal|"schema"
+argument_list|)
+decl_stmt|;
+name|String
+name|xml
+init|=
+name|h
+operator|.
+name|query
+argument_list|(
+name|req
+argument_list|)
+decl_stmt|;
+name|String
+name|r
+init|=
+name|h
+operator|.
+name|validateXPath
+argument_list|(
+name|xml
+argument_list|,
+name|field
+argument_list|(
+literal|"text"
+argument_list|)
+operator|+
+literal|"/arr[@name='copySources']/str[.='title']"
+argument_list|,
+name|field
+argument_list|(
+literal|"text"
+argument_list|)
+operator|+
+literal|"/arr[@name='copySources']/str[.='subject']"
+argument_list|,
+name|field
+argument_list|(
+literal|"title"
+argument_list|)
+operator|+
+literal|"/arr[@name='copyDests']/str[.='text']"
+argument_list|,
+name|field
+argument_list|(
+literal|"title"
+argument_list|)
+operator|+
+literal|"/arr[@name='copyDests']/str[.='title_stemmed']"
+argument_list|,
+comment|// :TODO: SOLR-3798
+comment|//dynfield("bar_copydest_*") + "/arr[@name='copySource']/str[.='foo_copysource_*']",
+name|dynfield
+argument_list|(
+literal|"foo_copysource_*"
+argument_list|)
+operator|+
+literal|"/arr[@name='copyDests']/str[.='bar_copydest_*']"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|xml
+argument_list|,
+literal|null
+argument_list|,
+name|r
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
